@@ -1,5 +1,6 @@
 4.25.1
 	- support Google Sheets interactive view URLs for XLSX files (but not tab identifiers)
+	- add --encoding option to all command-line scripts (tested with CSV)
 
 2022-02-28 Release 4.25
 	- remove discontinued "encoding" keyword for json.load (Python 3.9)
